# synthia

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CONTEXT.md  README.md  SPEC.md
.codex/skills/profile-synthia-ableton/: SKILL.md
docs/: ARCHITECTURE.md  BUILD_RELEASE.md  CLEAN_ROOM.md  PLANS.md  PRESET_SCHEMA.md  QUALITY.md  VALIDATION.md  index.md  modern-sylenth-baseline.md  modern-synthia-baseline.md
docs/exec-plans/: PLANS.md
docs/exec-plans/active/: 2026-06-04-build-ableton-host-integration-and-packaging.md  2026-06-04-build-amp-stereo-analog-and-factory-pluck.md  2026-06-04-build-editor-ui-and-preset-workflow.md  2026-06-04-build-modulation-matrix-ramp-and-glide.md  2026-06-04-build-nonlinear-filter-drive-and-oversampling.md  2026-06-04-build-onboard-fx-and-quality-modes.md  2026-06-04-build-oscillator-stack-and-mixer.md  2026-06-04-build-release-hardening-and-documentation-closeout.md  2026-06-04-build-render-validation-harness-and-metrics.md  2026-06-05-build-arp-step-chord-workflow.md  2026-06-05-build-sylenth-layer-oscillator-backbone.md  2026-06-05-handoff-modern-sylenth-ui-shell.md  2026-06-05-handoff-modulation-preset-arp-ui-polish.md  2026-06-06-build-preset-browser-and-bank-workflow.md  2026-06-06-handoff-sylenth-visual-information-architecture.md  index.md
docs/exec-plans/completed/: 2026-06-04-build-amp-stereo-analog-and-factory-pluck.md  2026-06-04-build-editor-ui-and-preset-workflow.md  2026-06-04-build-modulation-matrix-ramp-and-glide.md  2026-06-04-build-nonlinear-filter-drive-and-oversampling.md  2026-06-04-build-onboard-fx-and-quality-modes.md  2026-06-04-build-oscillator-stack-and-mixer.md  2026-06-04-build-parameter-state-and-preset-contract.md  2026-06-04-build-render-validation-harness-and-metrics.md  2026-06-04-build-voice-midi-envelope-lfo-core.md  2026-06-04-scaffold-juce-cmake-plugin-foundation.md  2026-06-05-build-arp-step-chord-workflow.md  2026-06-05-build-sylenth-layer-b-and-four-osc-rendering.md  2026-06-05-build-sylenth-layer-oscillator-backbone.md  2026-06-05-handoff-modern-sylenth-ui-shell.md  2026-06-05-rename-project-identity-to-sylenth-ai.md  2026-06-06-build-fx-rack-expansion.md  2026-06-06-build-midi-controller-workflow.md  2026-06-06-build-modulation-route-model.md  2026-06-06-build-modulation-route-render-proof.md  2026-06-06-build-modulation-write-adapter-and-route-schema.md  2026-06-06-build-patch-cost-and-voice-math-model.md  2026-06-06-build-preset-browser-and-bank-workflow.md  2026-06-06-build-preset-browser-invalid-errors.md  2026-06-06-build-preset-command-model.md  2026-06-06-build-preset-safe-save-metadata-ui.md  2026-06-06-build-preset-workflow-state-model.md  2026-06-06-build-preset-workflow-ui-controls.md  2026-06-06-build-randomize-render-validation.md  2026-06-06-build-sylenth-patch-recreation-suite.md  2026-06-06-validate-ableton-au-controller-forget-proof.md  2026-06-06-validate-ableton-au-controller-learn-proof.md  2026-06-06-validate-ableton-au-controller-value-proof.md  2026-06-06-validate-ableton-au-transport-smoke.md  2026-06-06-validate-ableton-current-build-smoke.md  2026-06-06-validate-ableton-hosted-au-editor-reopen-control.md  2026-06-06-validate-ableton-hosted-ui-lifecycle-attempt.md  2026-06-06-validate-ableton-offline-bounce-smoke.md  2026-06-06-validate-ableton-state-restore-smoke.md  2026-06-06-validate-ableton-transport-device-smoke.md  2026-06-06-validate-ableton-vst3-all-notes-panic-proof.md  (+18 more)
docs/host-validation/: ableton-smoke.md  local-install-troubleshooting.md
docs/programs/: PROGRAMS.md  README.md
docs/programs/active/: index.md
docs/programs/active/2026-06-04-synth-clean-room-pluck-instrument/: converged-decision-packet.md  cross-repo-review.md  dependency-graph.md  normalized-pass-build-tracks.md  planning-brief-1.md  program.md  research-pass-spec-and-docs.md
docs/programs/completed/: index.md
docs/research/: source-map.md
fixtures/midi/: overlap-pluck.mid
fixtures/presets/: invalid-mod-slot-depth.SynthiaPreset  invalid-mod-slot-depth.json  mod-slots-only.SynthiaPreset  mod-slots-only.json
presets/factory/: arp-motion-01.json  bass-wub-01.json  fx-space-01.json  init.json  pad-wide-01.json  pluck-core-01.json  supersaw-stack-01.json
presets/factory/Arp/: ARP - Arp Motion 01.SynthiaPreset
presets/factory/Bass/: BA - Acid Thread.SynthiaPreset  BA - Bass Wub 01.SynthiaPreset  BA - OTT Saw Lift.SynthiaPreset
presets/factory/FX/: FX - Space 01.SynthiaPreset
presets/factory/Init/: Init.SynthiaPreset
presets/factory/Lead/: LD - Rolling Circuit.SynthiaPreset  LD - Supersaw Stack 01.SynthiaPreset
presets/factory/Pad/: PD - Analog Silk Sweep.SynthiaPreset  PD - Cosmic Aura.SynthiaPreset  PD - Dark Space.SynthiaPreset  PD - Pad Wide 01.SynthiaPreset
presets/factory/Pluck/: PL - Droplet Glass.SynthiaPreset  PL - Pluck Core 01.SynthiaPreset  PL - Room Shine.SynthiaPreset
presets/factory/Synth/: SY - Broken Tape Keys.SynthiaPreset  SY - Pixel Storm Poly.SynthiaPreset
research/sylenth1-screenshots/: SOURCE_INDEX.md
scripts/: build-release-bundles.sh  check-cpp-fitness.py  check-cpp-format.sh  check-cpp-tidy.sh  check-plugin-bundles.sh  check-quality.sh  compare-ableton-bounce-realtime.py  install-local-plugins.sh  uninstall-local-plugins.sh
src/dsp/: Arpeggiator.cpp  Arpeggiator.h  Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  Lfo.cpp  Lfo.h  OscillatorStack.cpp  OscillatorStack.h  Ramp.cpp  Ramp.h  SynthEngine.cpp  SynthEngine.h  SynthParameters.h
src/dsp/fx/: FxChain.cpp  FxChain.h
src/midi/: MidiControllerMap.cpp  MidiControllerMap.h
src/modulation/: ModulationRouteModel.cpp  ModulationRouteModel.h
src/plugin/: ParameterRegistry.cpp  ParameterRegistry.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/presets/: PresetManager.cpp  PresetManager.h  PresetValidator.cpp  PresetValidator.h
src/validation/: SynthRender.cpp
src/voice/: Voice.cpp  Voice.h  VoiceAllocator.cpp  VoiceAllocator.h
tests/smoke/: SynthContractTest.cpp  SynthDspCoreTest.cpp  SynthSmokeTest.cpp  SynthVoiceCoreTest.cpp
(+21 files in other folders)
